--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "dependencies": {
-    "@types/jest": "^29.5.2",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
@@ -21,15 +20,10 @@
     "react-icons": "^4.10.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.14.0",
-    "react-switch": "^7.0.0",
     "react-toastify": "^9.1.3",
     "styled-components": "6.0.0-rc.3"
   },
   "devDependencies": {
-    "@testing-library/dom": "^9.3.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -38,7 +32,6 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "jest": "^29.5.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
