--- a/package.json
+++ b/package.json
@@ -14,19 +14,23 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
+    "firebase": "^10.0.0",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.14.0",
+    "react-stars": "^2.2.5",
     "react-toastify": "^9.1.3",
     "styled-components": "6.0.0-rc.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-stars": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
